// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewTable::Table::Cell default cell with a click handler passed 1`] = `
<td
  className="limit-overflow"
>
  <div
    className="cell-wrapper"
    onClick={[Function]}
  >
    <RenderLabel
      field={
        Immutable.Map {
          "name": "details",
          "title": "Details",
        }
      }
      value={
        <div>
          <div
            className="subject"
          >
            Great ticket
          </div>
          <div
            className="description"
          >
            undefined
          </div>
        </div>
      }
    />
  </div>
</td>
`;

exports[`ViewTable::Table::Cell default cell with a url passed 1`] = `
<td
  className="limit-overflow"
>
  <Link
    to="/app/ticket/123"
  >
    <div
      className="cell-wrapper"
    >
      <RenderLabel
        field={
          Immutable.Map {
            "name": "details",
            "title": "Details",
          }
        }
        value={
          <div>
            <div
              className="subject"
            >
              Great ticket
            </div>
            <div
              className="description"
            >
              undefined
            </div>
          </div>
        }
      />
    </div>
  </Link>
</td>
`;

exports[`ViewTable::Table::Cell default cell with no click handler passed (cant open items) 1`] = `
<td
  className="limit-overflow"
>
  <div
    className="cell-wrapper"
  >
    <RenderLabel
      field={
        Immutable.Map {
          "name": "details",
          "title": "Details",
        }
      }
      value={
        <div>
          <div
            className="subject"
          >
            Great ticket
          </div>
          <div
            className="description"
          >
            undefined
          </div>
        </div>
      }
    />
  </div>
</td>
`;

exports[`ViewTable::Table::Cell should use default props 1`] = `
Object {
  "children": <div
    className="cell-wrapper"
  >
    <RenderLabel
      field={
        Immutable.Map {
          "name": "details",
          "title": "Details",
        }
      }
      value={
        <div>
          <div
            className="subject"
          >
            undefined
          </div>
          <div
            className="description"
          >
            undefined
          </div>
        </div>
      }
    />
  </div>,
  "className": "limit-overflow",
}
`;
